<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pkk"
        android:id="@+id/logo_tentang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/title_pkk_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_tentang"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="PKK (Pemberdayaan Kesejahteraan Keluarga)"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tentang_pkk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_pkk_about"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="@string/pkk_desc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_visi"
        android:textColor="#000"
        android:text="@string/Visi_Title"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tentang_pkk"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tentang_visi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_visi"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="@string/pkk_desc"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_misi"
        android:textColor="#000"
        android:text="@string/Misi_Title"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tentang_visi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tentang_misi1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_misi"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="@string/misi1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tentang_misi2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tentang_misi1"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="@string/misi2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tentang_misi3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tentang_misi2"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="@string/misi3"/>







</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>