<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_splash"
        android:id="@+id/title_pkk"
        android:layout_above="@+id/desc_title"
        android:layout_centerHorizontal="true"
        android:textSize="70sp"
        android:textColor="#DC000000"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/desc_title"
        android:layout_above="@+id/logo_pkk"
        android:layout_marginBottom="20dp"
        android:text="@string/description_title"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:textColor="#B7000000"
        android:textStyle="bold"/>


    <ImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:id="@+id/logo_pkk"
        android:src="@drawable/pkk"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kelurahan_serdang"
        android:layout_below="@+id/logo_pkk"
        android:layout_marginTop="20dp"
        android:text="@string/subdistrict_name"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#B7000000"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_alignParentBottom="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:theme="@style/ProgressBar"/>

</RelativeLayout>